<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/movie_insert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#7B869B"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/title"
            />

        <EditText
            android:id="@+id/movie_insert_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#7B869B"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/year"/>

        <EditText
            android:id="@+id/movie_insert_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#7B869B"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/rating"/>

        <EditText
            android:id="@+id/movie_insert_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#7B869B"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/genre"/>

        <EditText
            android:id="@+id/movie_insert_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#7B869B"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/director"/>

        <EditText
            android:id="@+id/movie_insert_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="#7B869B"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/cast"/>


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/save_insert_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:shadowRadius="5"
        android:text="@string/save"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</LinearLayout>